# 10Pract

./: CMakeLists.txt  setup.py  test_vector_algebra.py  vector_algebra.cpp
